[gd_scene load_steps=32 format=2]

[ext_resource path="res://Objects/level.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/Default size/fishTile_002.png" type="Texture" id=2]
[ext_resource path="res://Assets/PNG/Default size/fishTile_024.png" type="Texture" id=3]
[ext_resource path="res://Assets/PNG/Default size/fishTile_006.png" type="Texture" id=4]
[ext_resource path="res://Assets/PNG/Default size/fishTile_001.png" type="Texture" id=5]
[ext_resource path="res://Assets/PNG/Default size/fishTile_011.png" type="Texture" id=6]
[ext_resource path="res://Assets/PNG/Default size/fishTile_020.png" type="Texture" id=7]
[ext_resource path="res://Assets/PNG/Default size/fishTile_089.png" type="Texture" id=8]
[ext_resource path="res://Assets/PNG/Default size/fishTile_005.png" type="Texture" id=9]
[ext_resource path="res://Assets/PNG/Default size/fishTile_007.png" type="Texture" id=10]
[ext_resource path="res://Assets/PNG/Default size/fishTile_083.png" type="Texture" id=11]
[ext_resource path="res://Assets/PNG/Default size/fishTile_022.png" type="Texture" id=12]
[ext_resource path="res://Assets/PNG/Default size/fishTile_013.png" type="Texture" id=13]
[ext_resource path="res://Assets/PNG/Default size/fishTile_018.png" type="Texture" id=14]
[ext_resource path="res://Assets/PNG/Default size/fishTile_009.png" type="Texture" id=15]
[ext_resource path="res://Assets/PNG/Default size/fishTile_023.png" type="Texture" id=16]
[ext_resource path="res://Assets/PNG/Default size/fishTile_004.png" type="Texture" id=17]
[ext_resource path="res://Assets/PNG/Default size/fishTile_012.png" type="Texture" id=18]
[ext_resource path="res://Assets/PNG/Default size/fishTile_021.png" type="Texture" id=19]
[ext_resource path="res://Assets/PNG/Default size/fishTile_082.png" type="Texture" id=20]
[ext_resource path="res://Objects/HUD.tscn" type="PackedScene" id=21]
[ext_resource path="res://Assets/PNG/Default size/fishTile_019.png" type="Texture" id=22]
[ext_resource path="res://Assets/PNG/Default size/fishTile_010.png" type="Texture" id=23]
[ext_resource path="res://Assets/PNG/Default size/fishTile_008.png" type="Texture" id=25]
[ext_resource path="res://Assets/PNG/Default size/fishTile_084.png" type="Texture" id=26]
[ext_resource path="res://Objects/Start.tscn" type="PackedScene" id=27]
[ext_resource path="res://Assets/PNG/Default size/fishTile_003.png" type="Texture" id=28]
[ext_resource path="res://Objects/YouDied.tscn" type="PackedScene" id=29]

[sub_resource type="TileSet" id=1]
0/name = "fishTile_001.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "fishTile_002.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "fishTile_003.png 2"
2/texture = ExtResource( 28 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "fishTile_004.png 3"
3/texture = ExtResource( 17 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "fishTile_005.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "fishTile_006.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "fishTile_007.png 6"
6/texture = ExtResource( 10 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "fishTile_008.png 7"
7/texture = ExtResource( 25 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "fishTile_009.png 8"
8/texture = ExtResource( 15 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "fishTile_010.png 9"
9/texture = ExtResource( 23 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "fishTile_011.png 10"
10/texture = ExtResource( 6 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "fishTile_012.png 11"
11/texture = ExtResource( 18 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "fishTile_013.png 12"
12/texture = ExtResource( 13 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "fishTile_018.png 13"
13/texture = ExtResource( 14 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "fishTile_019.png 14"
14/texture = ExtResource( 22 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "fishTile_020.png 15"
15/texture = ExtResource( 7 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "fishTile_021.png 16"
16/texture = ExtResource( 19 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "fishTile_022.png 17"
17/texture = ExtResource( 12 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "fishTile_023.png 18"
18/texture = ExtResource( 16 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "fishTile_024.png 19"
19/texture = ExtResource( 3 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 0, 0, 64, 64 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "fishTile_084.png 20"
20/texture = ExtResource( 26 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 0, 32, 64, 32 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "fishTile_082.png 21"
21/texture = ExtResource( 20 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 0, 0, 64, 64 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "fishTile_083.png 22"
22/texture = ExtResource( 11 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 0, 0, 64, 64 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "fishTile_084.png 23"
23/texture = ExtResource( 26 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 0, 0, 64, 64 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1088, 0, 0, 0, 0, 0, 1088, 448 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -128, 0, 0, 0, 0, 0, -128, 448 )
}

[node name="level" type="Node2D"]
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 3145824, 10, 0, 3211266, 11, 0, 3211280, 9, 0, 3211345, 21, 0, 3211346, 11, 0, 3211370, 12, 0, 3276826, 22, 0, 3276842, 21, 0, 3276875, 10, 0, 3276891, 12, 0, 3276895, 21, 0, 3276909, 22, 0, 3276911, 11, 0, 3407937, 9, 0, 3473459, 20, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 458752, 6, 0, 458753, 5, 0, 458754, 6, 0, 458755, 5, 0, 458756, 6, 0, 458757, 5, 0, 458758, 7, 0, 458759, 5, 0, 458760, 6, 0, 458761, 5, 0, 458762, 7, 0, 458763, 5, 0, 458764, 6, 0, 458765, 5, 0, 458766, 5, 0, 458767, 6, 0, 524288, 14, 0, 524289, 0, 0, 524290, 0, 0, 524291, 13, 0, 524292, 14, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 13, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 13, 0, 524303, 0, 0, 589824, 0, 0, 589825, 13, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 13, 0, 589831, 14, 0, 589832, 13, 0, 589833, 0, 0, 589834, 0, 0, 589835, 14, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.278431 )
margin_right = 1022.0
margin_bottom = 608.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_spawn01" type="Path2D" parent="."]
curve = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="enemy_follow1" type="PathFollow2D" parent="enemy_spawn01"]
position = Vector2( 1088, 0 )
rotation = 1.57083

[node name="enemy_spawn02" type="Path2D" parent="."]
curve = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="enemy_follow2" type="PathFollow2D" parent="enemy_spawn02"]
position = Vector2( -128, 0 )
rotation = 1.5708

[node name="Timer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 21 )]
margin_right = 1022.0
margin_bottom = 448.0

[node name="score" parent="HUD" index="0"]
margin_right = 53.0
rect_scale = Vector2( 2, 2 )
text = "score : 0"

[node name="YouDied" parent="." instance=ExtResource( 29 )]
margin_right = 1022.0
margin_bottom = 448.0

[node name="Start" parent="." instance=ExtResource( 27 )]
anchor_right = 0.0
margin_right = 1022.0
margin_bottom = 608.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HUD"]
